--- a/css/components.input.css
+++ b/css/components.input.css
@@ -22,6 +22,7 @@
     @apply border-none bg-gradient-orange text-white;
     @apply shadow-diffuse;
     @apply hover:bg-gradient-blue hover:shadow-none;
+    @apply focus:outline-hidden;
     @apply cursor-pointer disabled:cursor-not-allowed disabled:opacity-50 disabled:hover:bg-gradient-orange disabled:hover:shadow-diffuse;
     &:hover {
       text-decoration: none !important;
@@ -34,6 +35,7 @@
     @apply border-none bg-gradient-blue text-white;
     @apply shadow-line;
     @apply hover:bg-gradient-orange hover:shadow-diffuse;
+    @apply focus:outline-hidden;
     @apply cursor-pointer disabled:cursor-not-allowed disabled:opacity-50 disabled:hover:bg-gradient-blue disabled:hover:shadow-line;
     &:hover {
       text-decoration: none !important;
@@ -46,6 +48,7 @@
     @apply bg-transparent text-marketdata-darkblue;
     @apply shadow-line dark:shadow-darkline dark:text-white;
     @apply hover:bg-gradient-orange hover:text-white hover:shadow-diffuse;
+    @apply focus:outline-hidden;
     @apply cursor-pointer disabled:cursor-not-allowed disabled:opacity-50;
     @apply disabled:hover:bg-none disabled:hover:bg-transparent disabled:hover:text-marketdata-darkblue dark:disabled:hover:text-white disabled:hover:shadow-line dark:disabled:hover:shadow-darkline;
     &:hover {
@@ -59,6 +62,7 @@
     @apply bg-transparent text-marketdata-darkblue;
     @apply shadow-line dark:shadow-darkline dark:text-white;
     @apply hover:bg-gradient-blue hover:text-white hover:shadow-none;
+    @apply focus:outline-hidden;
     @apply cursor-pointer disabled:cursor-not-allowed disabled:opacity-50;
     @apply disabled:hover:bg-none disabled:hover:bg-transparent disabled:hover:text-marketdata-darkblue dark:disabled:hover:text-white disabled:hover:shadow-line dark:disabled:hover:shadow-darkline;
     &:hover {
